Add content to html

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
   <header>
-    <h1>Queen of the Black Coast</h1>
-    <p>By Robert E. Howard, 1934</p>
+    <h1 class="nina">Queen of the Black Coast</h1>
+    <p class="italic">By Robert E. Howard, 1934</p>
   </header>
   <article class="info">
-    <h2>1. Conan Joins the Pirates</h2>
+    <h2 class="mega">1. Conan Joins the Pirates</h2>
     <blockquote cite="http://">
-      <p>Believe green buds awaken in the spring,
+      <p class="push-0">Believe green buds awaken in the spring,
       That autumn paints the leaves with somber fire;
       Believe I held my heart inviolate
       To lavish on one man my hot desire.
